--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
           I am a dedicated golf professional and student at UC Riverside. With a passion for both playing and teaching golf, I have participated in competitive tournaments and coached aspiring golfers. My experience combines athletic performance, coaching, and academic pursuits, all of which have shaped my vision for a career in the golf industry.
         </p>
         <div class="social-icons">
+          <a target="_blank" id="socialicon-2" href="https://github.com/hartejgrewal/hartejgrewal.github.io.git">
+    <i class="fab fa-github"></i>
           <a target="_blank" id="socialicon-1" href="https://www.instagram.com/hartej.grewal.golf"><i class="fab fa-instagram"></i></a>
           <a target="_blank" id="socialicon-4" href="mailto:hartejqgrewal@gmail.com">
     <i class="fa fa-envelope"></i>
